	* string.c (str_utf8_nth): fixed a conditon of optimized lead 	  byte counting. [Bug #4366][ruby-dev:43170]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@30779 b2dd03c8-39d4-4d8f-98ff-823fe69b080e